# Sentiment-Analysis-in-German-Language

./: Dockerfile  README.md  pyproject.toml
data/: test_data.json  test_data.txt
sample text/negative text sample/: test_data.json  test_data.txt
sample text/neutral text sample/: test_data.json  test_data.txt
sample text/positive text sample/: test_data.txt
src/: main.py  models.py
