[tool.poetry]
name = "Sentiment"
version = "0.1.0"
description = "This is a example of sentiment analysis"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
numpy = "^1.20.2"
torch = "^1.8.1"
transformers = "^4.4.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
